feat: new content for website

--- a/src/content/posts/SOLID.mdx
+++ b/src/content/posts/SOLID.mdx
@@ -2,7 +2,7 @@
 title: Principios SOLID
 description: Domina los principios SOLID para mejorar la calidad de tu código
 publishDate: 2025-06-05
-tags: ["Clean code", "TypeScript", "Desarrollo Web"]
+tags: ["Clean code"]
 ---
 
 import { Image } from "astro:assets";
@@ -22,7 +22,7 @@ Estos principios son:
 
 Estos principios son esenciales para cualquier desarrollador que quiera escribir código de alta calidad y evitar problemas comunes como el código espagueti, la dificultad para realizar cambios y la falta de pruebas.
 
-## Tutorial con ejemplos de código
+## Vídeo completo con ejemplos prácticos
 
 <YouTubeEmbed
   id="uINCYeb1KAM"
@@ -47,3 +47,5 @@ Estos principios son esenciales para cualquier desarrollador que quiera escribir
 ## Únete a la comunidad
 
 ¿Te ha gustado el contenido? No olvides suscribirte a las redes de la comunidad de <a href="https://programacion-es.dev/redes/" target="_blank" rel="noopener noreferrer">Programación en español</a>
+
+¿Quieres apoyar el contenido del canal de YouTube? Hazte miembro del canal <a href="https://www.youtube.com/channel/UCNliuGyPizt7uNcdCrUoduQ/join" target="_blank" rel="noopener noreferrer">entrando a este enlace</a>.
