feat: content import fix

--- a/src/content/posts/Fundamentos.mdx
+++ b/src/content/posts/Fundamentos.mdx
@@ -6,7 +6,7 @@ tags: ["Fundamentos"]
 ---
 
 import { Image } from "astro:assets";
-import YouTubeEmbed from "../../components/YouTubeEmbed.astro";
+import YouTubeEmbed from "/src/components/YouTubeEmbed.astro";
 
 # Fundamentos de programación
 
