--- a/src/content/posts/SOLID.mdx
+++ b/src/content/posts/SOLID.mdx
@@ -6,7 +6,7 @@ tags: ["Clean code"]
 ---
 
 import { Image } from "astro:assets";
-import YouTubeEmbed from "../../components/YouTubeEmbed.astro";
+import YouTubeEmbed from "/src/components/YouTubeEmbed.astro";
 
 # Principios SOLID
 
