--- a/src/content/posts/Arrays_pilas_colas.mdx
+++ b/src/content/posts/Arrays_pilas_colas.mdx
@@ -6,7 +6,7 @@ tags: ["algoritmos y estructuras de datos", "Fundamentos"]
 ---
 
 import { Image } from "astro:assets";
-import YouTubeEmbed from "../../components/YouTubeEmbed.astro";
+import YouTubeEmbed from "/src/components/YouTubeEmbed.astro";
 
 # Arrays, pilas y colas
 
