--- a/src/content/posts/Linked_list.mdx
+++ b/src/content/posts/Linked_list.mdx
@@ -6,7 +6,7 @@ tags: ["algoritmos y estructuras de datos", "Fundamentos"]
 ---
 
 import { Image } from "astro:assets";
-import YouTubeEmbed from "../../components/YouTubeEmbed.astro";
+import YouTubeEmbed from "/src/components/YouTubeEmbed.astro";
 
 # Listas enlazadas
 
