feat: new content for blogh

--- a/src/content/posts/SOLID.mdx
+++ b/src/content/posts/SOLID.mdx
@@ -36,11 +36,9 @@ Estos principios son esenciales para cualquier desarrollador que quiera escribir
   target="_blank"
   rel="noopener noreferrer"
 >
-  <Image
+  <img
     src="/diagrams/SOLID-diagrama.png"
     alt="Diagrama de los principios SOLID"
-    width={800}
-    height={600}
   />
 </a>
 
