feat: singleton pattern

--- a/src/content/posts/strategy-pattern.mdx
+++ b/src/content/posts/strategy-pattern.mdx
@@ -28,7 +28,7 @@ Utiliza el patrón Strategy cuando:
 
 <YouTubeEmbed
   id="j0I_hzEhfTE"
-  title="Qué son los patrones de diseño - Programación en español"
+  title="Patrón Strategy - Programación en español"
 />
 
 ## Diagrama teórico
