bug🐛/YoutubeEmbed component import error

--- a/src/content/posts/patrones-de-diseño/Patrones_d_vs_arch.mdx
+++ b/src/content/posts/patrones-de-diseño/Patrones_d_vs_arch.mdx
@@ -6,7 +6,7 @@ tags: ["patrones de diseño", "arquitectura"]
 ---
 
 import { Image } from "astro:assets";
-import YouTubeEmbed from "../../components/YoutubeEmbed.astro";
+import YouTubeEmbed from "../../../components/YoutubeEmbed.astro";
 
 # Patrones de diseño vs patrones de arquitectura
 
