--- a/src/content/posts/fundamentos-de-programacion/Fundamentos.mdx
+++ b/src/content/posts/fundamentos-de-programacion/Fundamentos.mdx
@@ -6,7 +6,7 @@ tags: ["Fundamentos"]
 ---
 
 import { Image } from "astro:assets";
-import YouTubeEmbed from "../../components/YoutubeEmbed.astro";
+import YouTubeEmbed from "../../../components/YoutubeEmbed.astro";
 
 # Fundamentos de programación
 
