--- a/src/content/posts/patrones-de-diseño/singleton-pattern.mdx
+++ b/src/content/posts/patrones-de-diseño/singleton-pattern.mdx
@@ -6,7 +6,7 @@ tags: ["patrones de diseño"]
 ---
 
 import { Image } from "astro:assets";
-import YouTubeEmbed from "../../components/YoutubeEmbed.astro";
+import YouTubeEmbed from "../../../components/YoutubeEmbed.astro";
 
 # Patrón Singleton
 
