--- a/src/content/posts/vue/vue-quick-start.mdx
+++ b/src/content/posts/vue/vue-quick-start.mdx
@@ -6,7 +6,7 @@ tags: ["vue"]
 ---
 
 import { Image } from "astro:assets";
-import YouTubeEmbed from "../../components/YoutubeEmbed.astro";
+import YouTubeEmbed from "../../../components/YoutubeEmbed.astro";
 
 # Requisitos
 
